	     arbitrary AtomGroup (e.g. from a selection); this is much
	     more flexible than Writer.write_next_timestep()
         * new attributes residues and segments for AtomGroup to give 
           access to the list of residue/segment objects of the group 
	 * new special dihedral angle selections defined for Residue
           class to simplify analysis of backbone torsions

09/19/10 orbeckst
	* quick-fix release 0.6.4.1
	* fixed import issue with python 2.5 (Issue 41)

09/16/10 orbeckst, danny.parton
	* release 0.6.4
	* GRO writer added
	* fixed XTC writer (Issue 38)
	* convert box representations (Issue 37)
	* primitive PDB parser added (slightly faster and ignores
	  correctness of resids, atomnames etc but reads CRYST1 into unitcell)
	* Universe gained the 'permissive' flag to switch on the
	  primitive PDB parser/reader
	* Simple 'chained reader' which enables a Universe to
	  transparently read a list of trajectory files (Issue 39).
        * Additional methods for AtomGroup: numberOfResidues(),
	  resids(), resnames()
        * new bilayer analysis script for membrane composition on a
	  per-leaflet basis (examples/membrane-composition.py); also
	  renamed examples/leaflet.py to membrane-leaflets.py

07/08/10 orbeckst, denniej0, danny.parton, philipwfowler
	* 0.6.3 release
        * minimum requirement is python 2.4 (using with_statement in the
          analysis module and we have not tested on 2.3 in a while)
        * analysis modules (MDAnalysis.analysis):
          - lipid bilayer leaflet detection
          - native contact analysis ("q1-q2")
	  - rms-fitting based on sequence alignment
        * write selections for other codes from AtomGroups (VMD, pymol, CHARMM,
          Gromacs ndx)
        * gro reader (Issue 31)
	* better API for loading a topology and a coordinate file in Universe()
        * trajectory reader: DCDReader can reverse trajectory with negative
          step increment; XTC/TRRReader can do simple (forward) slices by doing