@@ -30,6 +30,8 @@ The rules for this file:
            access to the list of residue/segment objects of the group 
 	 * new special dihedral angle selections defined for Residue
            class to simplify analysis of backbone torsions
+         * new exception NoDataError; raised when creation of an empty
+	   AtomGroup is attempted
 
 09/19/10 orbeckst
 	* quick-fix release 0.6.4.1
